# aur-git

./: .install  PKGBUILD  aur_git.py  setup.cfg
