[metadata]
name = aur_git
version = 0.0.2
author = siphr
author_email = pypi@techtum.dev
description = Retrieve and install an AUR package from Arch User Repository (AUR).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.techtum.dev
project_urls =
    Bug Tracker = https://github.com/siphr/aur-git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = aur_git
python_requires = >=3.6

[options.packages.find]
where = src
